--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
           - os: macOS-latest
             psversion: powershell
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v1
 
       - name: Powershell Build
         env:
