--- a/PowerConfig/Tests/Mocks/Test.yaml
+++ b/PowerConfig/Tests/Mocks/Test.yaml
@@ -1,19 +1,16 @@
----
-# An employee record
-name: Martin D'vloper
-job: Developer
-skill: Elite
-employed: True
-foods:
-    - Apple
-    - Orange
-    - Strawberry
-    - Mango
-languages:
-    perl: Elite
-    python: Elite
-    pascal: Lame
-education: |
-    4 GCSEs
-    3 A-Levels
-    BSc in the Internet of Things
+environment:
+  Level1:
+    Level2: Level2Value
+
+build:
+  Build1:
+    Level2: Level2Value
+  Build2: Build2Value
+
+test:
+  Test1: Test
+
+overrideme: Yaml
+
+override:
+  overrideme: Yaml
