--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,14 +24,14 @@ jobs:
           - os: macOS-latest
             psversion: powershell
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v1
 
       - name: Powershell Build
         env:
           PSBUILDEXE: ${{ matrix.psversion }}
         shell: pwsh
         run: |
-          & $env:PSBUILDEXE -noninteractive -noprofile -f ./build.ps1
+          & $env:PSBUILDEXE -noninteractive -noprofile -f ./build.ps1 Build,Test
           $myexit = $LASTEXITCODE
           if ($myexit) {exit $myexit}
       - uses: actions/upload-artifact@master
